--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,18 @@
 <h3>Good Muse</h3>
-<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+<% if user_signed_in? %>
+<li>
+	<%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+</li>
+<% else %>
+<li>
+	<%= link_to('Login', new_user_session_path)  %>  
+</li>
+<% end %>
+
+
+<!-- <script type="text/javascript">
+
+	$(document).ready(function() {
+		window.close();
+	});
+</script> -->
