--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-</head>
-<body>
-  <h2>Password Reset</h2>
-  <p> 
-    <strong> Email : </strong>  <%= @user.email %>  
-    <br>
-    <strong> New Password : </strong>  <%= @new_password %>
-    <p>
-    </body>
-    </html>
+
+
+<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+
+<a href="http://localhost:3000/users/password/edit?reset_password_token=<%= @token %>">Change my password</a> 
+
+<p>If you didn't request this, please ignore this email.</p>
+<p>Your password won't change until you access the link above and create a new one.</p>
